Tighten-up space between schedule, roster, news links...
in sports dropdown menu

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -21,13 +21,13 @@
                         <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-right">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-right">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-center">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-center">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/baseball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-left">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-left">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/baseball/news">News</a>
                         </div>
                       </div>
@@ -37,13 +37,13 @@
                         <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball"><strong>Basketball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-right">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-right">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-center">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-center">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/mens-basketball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-left">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-left">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/mens-basketball/news">News</a>
                         </div>
                       </div>
@@ -53,13 +53,13 @@
                         <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/soccer"><strong>Soccer</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-right">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-right">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/soccer/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-center">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-center">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/soccer/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-left">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-left">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/soccer/news">News</a>
                         </div>
                       </div>
@@ -74,13 +74,13 @@
                         <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball"><strong>Basketball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-right">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-right">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/womens-basketball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-center">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-center">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/womens-basketball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-left">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-left">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/womens-basketball/news">News</a>
                         </div>
                       </div>
@@ -90,13 +90,13 @@
                         <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/softball"><strong>Softball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-right">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-right">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/softball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-center">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-center">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/softball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-left">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-left">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/softball/news">News</a>
                         </div>
                       </div>
@@ -106,13 +106,13 @@
                         <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/volleyball"><strong>Volleyball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-right">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-right">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/volleyball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-center">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-center">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/volleyball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block text-left">
+                        <div class="col-md-2 d-none d-md-block mega-nav__sport-link--no-padding text-left">
                           <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/volleyball/news">News</a>
                         </div>
                       </div>
