--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -166,6 +166,13 @@
   }
 }
 
+@media screen and (min-width: 992px) {
+  .mega-nav__sport-link--no-padding {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 .mega-nav__sport-name--margin-right {
   margin-right: 15px;
 }
