Define nav-link color as the var $nav-link

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -33,7 +33,7 @@ h3 {
 }
 
 .nav-link-main { //styles for Main links in mega-nav
-  color: $nav-link !important;
+  color: $nav-link;
   font-family: $secondaryfont-stack;
   font-size: 1em;
   font-weight: $secondaryfont-weight-regular;
