Define a variable for color of the hamburger menu icon's border ...
$navbar-toggler-border-color var color of the border around the hamburger button

The color for the 3 lines that make up the hamburger menu (top-bun, patty, bottom-bun) cannot be set via a SCSS variable:
Color of the 3 lines is defined in a url(data: . . .) svg where SASS compiler cannot properly inject the variables value

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -34,6 +34,12 @@ $slide-bg: $white;            // Background color for the upcoming games slick s
 $sub-nav-heading: $white;     // Font color for h1.page-heading heading of sub-nav
 $nav-link: $white;            // Color for nav-link-main links in mega-nav
 
+// $navbar-toggler-border-color will only change the border color around the hamburger menu:
+// The 3 hamburger lines are coloured in a url(data:...) svg. SCSS cannot inject a variable color into the url(data:svg)
+// You will find the 3 hamburger lines colour defined in _mega-nav.scss under the '.custom-toggler .navbar-toggler-icon {...}' selector
+// Why yes, I did just spell 'colour' the british way.
+$navbar-toggler-border-color: rgba(255,255,255,0.7);
+
 html,
 body {
   overflow-x: hidden;
