--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -1,6 +1,6 @@
-<nav id="navBar" class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav id="navBar" class="navbar navbar-expand-lg fixed-top">
   <div class="clickable">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <a href="{{page.baseurl}}"><img src="{{page.baseurl}}assets/img/cavaliers-logo.png" class="center-logo d-none d-lg-inline" alt="KCC Cavaliers logo link to main athletics page"></a>
@@ -14,7 +14,7 @@
             <div class="container drop-pad">
               <div class="row">
                 <div class="col-md-6">
-                  <ul class="nav flex-column">
+                  <ul class="nav flex-column mega-nav__flex-column-left--margin">
                     <h3 class="menu-heading">Men's Sports</h3>
                     <li class="nav-list">
                       <div class="row nav-row mega-nav__nav-row--bottom-border">
@@ -67,7 +67,7 @@
                   </ul>
                 </div>
                 <div class="col-md-6">
-                  <ul class="nav flex-column">
+                  <ul class="nav flex-column mega-nav__flex-column-right--margin">
                     <h3 class="menu-heading">Women's Sports</h3>
                     <li class="nav-list">
                       <div class="row nav-row mega-nav__nav-row--bottom-border">
@@ -143,14 +143,14 @@
                 <li class="nav-list">
                   <div class="row nav-row facilities-drop-pad mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/fitness-center"><strong>Fitness Center</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/facilities/fitness-center"><strong>Fitness Center</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities"><strong>Sports Facilities</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities"><strong>Sports Facilities</strong></a>
                     </div>
                   </div>
                 </li>
@@ -179,42 +179,42 @@
                 <li class="nav-list">
                   <div class="row nav-row recruit-pad mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text" rel="noopener" target="_blank" href="https://form.jotform.com/72396568714974"><strong>Baseball Form</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text" rel="noopener" target="_blank" href="https://form.jotform.com/72396568714974"><strong>Baseball Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72495899814982"><strong>Men's Basketball Form</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72495899814982"><strong>Men's Basketball Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72536200679963"><strong>Women's Basketball  Form</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72536200679963"><strong>Women's Basketball  Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72476618714969"><strong>Soccer Form</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72476618714969"><strong>Soccer Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72396278214967"><strong>Softball Form</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72396278214967"><strong>Softball Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72396296514970"><strong>Volleyball Form</strong></a>
+                      <a class="nav-link typography__nav-link-secondary no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72396296514970"><strong>Volleyball Form</strong></a>
                     </div>
                   </div>
                 </li>
@@ -244,21 +244,21 @@
               <li class="nav-list">
                 <div class="row nav-row facilities-drop-pad mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cash-bash"><strong>Cash Bash</strong></a>
+                    <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/support/cash-bash"><strong>Cash Bash</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
                 <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cavalier-club"><strong>Cavalier Club</strong></a>
+                    <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/support/cavalier-club"><strong>Cavalier Club</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
                 <div class="row nav-row">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/donate"><strong>Donate</strong></a>
+                    <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/support/donate"><strong>Donate</strong></a>
                   </div>
                 </div>
               </li>
@@ -289,28 +289,28 @@
               <li class="nav-list">
                 <div class="row nav-row about-drop-pad mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/student-athletes"><strong>Student-Athlete Experience</strong></a>
+                    <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/about/student-athletes"><strong>Student-Athlete Experience</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
                 <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/equity"><strong>Equity in Athletics</strong></a>
+                    <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/about/equity"><strong>Equity in Athletics</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
                 <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/staff"><strong>Staff Directory</strong></a>
+                    <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/about/staff"><strong>Staff Directory</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
                 <div class="row nav-row">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" target="_blank" rel="noopener" href="https://form.jotform.com/72415108814957"><strong>Alumni Survey</strong></a>
+                    <a class="nav-link typography__nav-link-secondary no-pad dark-text" target="_blank" rel="noopener" href="https://form.jotform.com/72415108814957"><strong>Alumni Survey</strong></a>
                   </div>
                 </div>
               </li>
