Increase size of news, main, and coaches headings for desktop views...
Decrease size and weight of coach title heading

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -166,6 +166,13 @@ p {
   font-weight: $secondaryfont-weight-regular;
 }
 
+@media screen and (min-width: 992px) {
+  .main-heading {
+    font-size: 1.8em;
+    font-weight: $secondaryfont-weight-boldish;
+  }
+}
+
 // Typography for Coaches sections on pages
 // ===========================================
 .coaches-heading {
@@ -174,6 +181,13 @@ p {
   font-size: 1.4em;
   font-weight: $secondaryfont-weight-regular;
   margin-left: 15px;
+}
+
+@media screen and (min-width: 992px) {
+  .coaches-heading {
+    font-size: 1.8em;
+    font-weight: $secondaryfont-weight-boldish;
+  }
 }
 
 .coach-name {
@@ -186,8 +200,8 @@ p {
 .coach-title {
   color: $grey-heading;
   font-family: $secondaryfont-stack;
-  font-size: 1.2em;
-  font-weight: $secondaryfont-weight-black;
+  font-size: 1.1em;
+  font-weight: $secondaryfont-weight-boldish;
 }
 
 p.general-p {
@@ -199,6 +213,12 @@ p.general-p {
   color: $primary-red;
   font-family: $secondaryfont-stack;
   font-size: 1.2em;
+}
+
+@media screen and (min-width: 992px) {
+  .news__heading {
+    font-size: 1.6em;
+  }
 }
 
 .news__sub-heading {
