--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,8 @@
         <link rel="icon" type="image/x-icon" href="{{page.baseurl}}favicon.ico" />
         <!-- Custom CSS Stylesheet -->
         <link rel="stylesheet" href="{{page.baseurl}}assets/css/main.css">
+        <link rel="stylesheet" href="{{page.baseurl}}assets/css/content.css">
+
         <!--[if IE]>
      <style type="text/css">
 
