--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -40,6 +40,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 60px;
+  max-width: 1400px;
 }
 
 // breakpoint and up - mega dropdown styles
