Some reorganization of the typography mess. Create typography styles for CloudCannon CMS...
Used find in project to do some reorganization and cleanup of typography styles

Move typography styles that will also be used in the CMS into _content-typography.scss (which gets @import-ed into _typography.scss)
Type styles for general content moved to seperate module (_content-typography.scss) to be compiled in seperate SASS task and seperate css file to give CloudCannon access to.

ANY CSS SELECTORS USED IN CLOUDCANNON NEED BOTH AN ELEMENT SELECTOR AND CLASS SELECTOR TO WORK (e.g. 'h3.blue-heading')
Element+class selectors are not our prefered convention but deleting the element selector will break it in the CMS

Also:
Combined duplicate 'p' selector
Deleted h3 element selector

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -1,8 +1,1 @@
-/* Predefined styles available for content editors in CloudCannon */
-h3.content-heading {
-    /* Importants added to test CloudCannon CMS */
-  color: #666;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.4em;
-  font-weight: 500;
-}
+h2.main-heading{color:#666;font-family:Roboto,sans-serif;font-size:1.4em;font-weight:400}@media screen and (min-width:992px){h2.main-heading{font-size:1.8em;font-weight:500}}h3.blue-heading{color:#0f3b63;font-family:Roboto,sans-serif;font-size:1.4em;font-weight:700}p{color:#666;font-family:Open Sans,sans-serif;font-size:1em}
