Add comment for the need of an html,body selector...
(It's used to eliminate horizontal scrolling on mobile devices)

--- a/assets/scss/1-base/_body.scss
+++ b/assets/scss/1-base/_body.scss
@@ -1,6 +1,9 @@
 
 html,
 body {
+  // Needed to eliminate horizontal scrolling on mobile devices
+  // I'd say that's pretty important
+  // "That's pretty important" ~ Wes
   overflow-x: hidden;
 }
 
