Put space between Sports Facilities and Fitness Center content for Mobile device viewing
Spacing added via a couple media queries

--- a/assets/scss/5-pages/facilities/_facilities.scss
+++ b/assets/scss/5-pages/facilities/_facilities.scss
@@ -5,3 +5,25 @@
 .facilities__text-margin {
   margin-top: 10px;
 }
+
+@media screen and (min-width: 768px) {
+  .facilities__text-margin {
+    margin-top: -20px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .facilities__text-margin {
+    margin-top: 10px;
+  }
+}
+
+.facilities__row--bottom-margin {
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 992px) {
+  .facilities__row--bottom-margin {
+    margin-bottom: 0;
+  }
+}
