Place main.css after content.css...
Anything in our 'main.css' stylesheet should be able to overide our custom 'content.css' styles (content.css used for CMS)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,9 +37,10 @@
         <!-- Place favicon.ico in the root directory -->
         <!-- Standard Favicon -->
         <link rel="icon" type="image/x-icon" href="{{page.baseurl}}favicon.ico" />
+        <!-- Custom CSS Stylesheet for CloudCannon CMS -->
+        <link rel="stylesheet" href="{{page.baseurl}}assets/css/content.css">
         <!-- Custom CSS Stylesheet -->
         <link rel="stylesheet" href="{{page.baseurl}}assets/css/main.css">
-        <link rel="stylesheet" href="{{page.baseurl}}assets/css/content.css">
 
         <!--[if IE]>
      <style type="text/css">
