Create 4th level heading styles (for use in CMS too)...
Fourth level heading (h4) is needed for pages with EXCESSIVE amounts of information (e.g. Fitness Center page)
This new style is also available in the CMS on the Fitness Center page (in the styles dropdown of visual editor)

--- a/assets/scss/1-base/_content-typography.scss
+++ b/assets/scss/1-base/_content-typography.scss
@@ -43,6 +43,13 @@ h3.blue-heading {
   font-weight: $secondaryfont-weight-bold;
 }
 
+h4.blue-heading-small {
+  color: $primary-blue;
+  font-family: $secondaryfont-stack;
+  font-size: 1.25em;
+  font-weight: $secondaryfont-weight-boldish;
+}
+
 // General paragraph text style
 // ================================================================
 p {
