Create td and th typography styles to overide CloudCannon inconsisitencies in styles
Used td and th css selectors to define typography styles in order to create a consistent look throught the site
These defined styles prevent CloudCannon from placing other styles via the CMS when being edited

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import '1-base/body';
 @import '1-base/typography';
 @import '1-base/links';
+@import '1-base/tables';
 
 // Modular components
 @import '3-modules/mega-nav';
