--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import '1-base/typography';
 @import '1-base/links';
 @import '1-base/tables';
+@import '1-base/buttons';
 
 // Modular components
 @import '3-modules/mega-nav';
