Remove .card & .card-header selectors/styles via comment-out...
These 2 selectors ('.card' and '.card-header') are for bootstrap components
Was custom KCC brand styling for card headers...

--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -7,15 +7,15 @@
   vertical-align: middle;
 }
 
-.card-header {
-  background-color: $primary-red;
-  border-top-left-radius: 10px !important;
-  border-top-right-radius: 10px !important;
-}
+// .card-header {
+//   background-color: $primary-red;
+//   border-top-left-radius: 10px !important;
+//   border-top-right-radius: 10px !important;
+// }
 
-.card {
-  border-radius: 10px;
-}
+// .card {
+//   border-radius: 10px;
+//  }
 
 .scroll-table {
   height: 500px;
